# hackathon-processor

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.specify/: extension-catalogs.yml
.specify/extensions/: .registry
.specify/extensions/fixit/: CHANGELOG.md  LICENSE  README.md  extension.yml
.specify/extensions/fixit/commands/: run.md
.specify/integrations/: pi.manifest.json  speckit.manifest.json
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
app/: main.py
