[project]
name = "hackathon-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "taskipy>=1.10.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.20.0",
    "ollama>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-multipart>=0.0.6",
]

[tool.taskipy.tasks]
run="uv run -m app.main"
dev="uv run -m app.main --reload"
test="uv run pytest -vs tests/"
lint="uv run flake8 app/ scripts/ --count --select=E9,F63,F7,F82 --show-source --statistics"

[pytest]
testpaths = ["app", "tests"]
pythonpath = "."
python_files = ["test_*.py", "*_test.py"]

